--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,45 @@
+* {
+  box-sizing: border-box;
+}
+
 h1,
 p {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body {
+  height:100%;
+  margin: 0;
+  background-color: rgb(215, 209, 209);
+}
+.top--div {
+display:flex;
+align-items: center;
+background-color: #000000;
+align-content: center;
+height: 90px;
+padding: 30px 25px;
+margin:0;
+}
+
+.top--div > h1 {
+  align-items: center;
+  color: rgb(255, 200, 0);
+  margin: 0;
+  padding: 0;
+  }
+.top--div > img {
+ width: 120px;
+}
+
+.Main--container{
+  height: 100%;
+  background-color: rgb(215, 209, 209);
+  border-radius: 9px;
+  border: 10px;
+  margin: 0 px;
+  border-color: #000000;
+  color: blueviolet;
+  padding: 20px;
 }
