--- a/src/style.css
+++ b/src/style.css
@@ -9,18 +9,19 @@ p {
 }
 
 body {
-  height:100%;
+  height: 100%;
   margin: 0;
   background-color: rgb(215, 209, 209);
+  width: 600px;
 }
 .top--div {
-display:flex;
-align-items: center;
-background-color: #000000;
-align-content: center;
-height: 90px;
-padding: 30px 25px;
-margin:0;
+  display: flex;
+  align-items: center;
+  background-color: #000000;
+  align-content: center;
+  height: 90px;
+  padding: 30px 25px;
+  margin: 0;
 }
 
 .top--div > h1 {
@@ -28,12 +29,12 @@ margin:0;
   color: rgb(255, 200, 0);
   margin: 0;
   padding: 0;
-  }
+}
 .top--div > img {
- width: 120px;
+  width: 120px;
 }
 
-.Main--container{
+.Main--container {
   height: 100%;
   background-color: rgb(215, 209, 209);
   border-radius: 9px;
@@ -42,4 +43,31 @@ margin:0;
   border-color: #000000;
   color: blueviolet;
   padding: 20px;
+}
+
+.filmcard--title {
+  color: #000000;
+  font-style: italic;
+  margin: 5px;
+  padding: 0px;
+}
+.filmcard--crawl {
+  color: blue;
+  font-size: 12px;
+  margin: 5px;
+  padding: 0px;
+}
+
+.filmcard--realeasedate {
+  font-size: small;
+  margin: 5px;
+  padding: 0;
+}
+.filmcard {
+  border-width:1px;
+  border-style:solid;
+  border-color:black;
+  border-radius: 10px;
+  padding: 0px;
+  margin: 10px;
 }
