--- a/src/style.css
+++ b/src/style.css
@@ -64,10 +64,11 @@ body {
   padding: 0;
 }
 .filmcard {
-  border-width:1px;
-  border-style:solid;
-  border-color:black;
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
   border-radius: 10px;
   padding: 0px;
   margin: 10px;
+  background-color: bisque;
 }
